<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:background="#FFFFFF">


        <TextView
            android:id="@+id/bestroleplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bestevaluater"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="33dp"
            android:textAppearance="@style/roleplayers" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cardevaluaterone"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#5FB6A1">


        <TextView
            android:id="@+id/evaluaterone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluaterone"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp"
            android:textAppearance="@style/toastmaster"
            />

        <TextView
            android:id="@+id/evaluateronename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/evaluaterone"
            android:text="@string/tm_zakiuddi"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/tm_zakiuddi"
            />

    </RelativeLayout>

    <View
        android:id="@+id/line_1"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_below="@id/relativetmofday"
        android:layout_marginLeft="65dp"
        android:background="#FFFFFF" />


    <RelativeLayout
        android:id="@+id/cardevaluatertwo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#5FB6A1">


        <TextView
            android:id="@+id/evaluatertwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluatertwo"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp"
            android:textAppearance="@style/toastmaster"
            />

        <TextView
            android:id="@+id/evaluatertwoname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/evaluatertwo"
            android:text="@string/tm_zakiuddi"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/tm_zakiuddi"
            />

    </RelativeLayout>

    <View
        android:id="@+id/line_2"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_below="@id/relativetmofday"
        android:layout_marginLeft="65dp"
        android:background="#FFFFFF" />


    <RelativeLayout
        android:id="@+id/cardevaluaterthree"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#5FB6A1">


        <TextView
            android:id="@+id/evaluaterthree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluaterthree"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp"
            android:textAppearance="@style/toastmaster"
            />

        <TextView
            android:id="@+id/evaluaterthreename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/evaluaterthree"
            android:text="@string/tm_zakiuddi"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/tm_zakiuddi"
            />

    </RelativeLayout>

    <View
        android:id="@+id/line_3"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_below="@id/relativetmofday"
        android:layout_marginLeft="65dp"
        android:background="#FFFFFF" />


    <RelativeLayout
        android:id="@+id/cardevaluaterfour"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#5FB6A1">


        <TextView
            android:id="@+id/evaluaterfour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluaterfour"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp"
            android:textAppearance="@style/toastmaster"
            />

        <TextView
            android:id="@+id/evaluaterfourname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/evaluaterfour"
            android:text="@string/tm_zakiuddi"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/tm_zakiuddi"
            />

    </RelativeLayout>






</LinearLayout>